--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "webpack-concat-files-plugin": "^0.5.2",
     "webpack-dev-server": "^4.11.1",
     "webpack-merge-and-include-globally": "^2.3.4"
+  },
+  "dependencies": {
+    "simplebar": "^6.2.5"
   }
 }
